# Pulsecrate

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json
database/: schema.sql
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
