[package]
name = "pulsecrate"
version = "0.1.0"
description = "Fast music library scanner and organizer for DJs and electronic music collectors"
authors = ["Pulsecrate Contributors"]
edition = "2021"

[lib]
name = "pulsecrate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
uuid = { version = "1", features = ["v4", "serde"] }

[features]
default = []
